# RVLang-2-CLI

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.rvl  rvlang
src/: System.cpp  System.hpp  main.cpp
src/cli/: Cli.cpp  Cli.hpp  Utils.cpp  Utils.hpp
src/interprieter/: AST.hpp  DataTypes.hpp  IRGenerator.cpp  IRGenerator.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Runtime.cpp  Runtime.hpp  Token.hpp  TokenType.hpp
